video can be liked and disliked and it gets saved in the database
